Fix message renderer overflowing when a toggleable section is inside a display: flex section

--- a/loritta-bot-discord/src/main/sass-dashboard-v2/components/_discord-toggle.scss
+++ b/loritta-bot-discord/src/main/sass-dashboard-v2/components/_discord-toggle.scss
@@ -10,6 +10,11 @@
     border-radius: var(--nice-border-radius);
     border: 1px solid var(--card-border-color);
     border-top-color: var(--card-border-highlight-color);
+    // This looks stupid, "why do we need this *here*?"
+    // Well, this fixes a bug with the message preview overflowing the parent container for... some reason!?
+    // The overflow issue only happens when a toggleable section is inside a display flex section
+    // (Example: When it is inside a .field-wrappers -> .field-wrapper -> .toggleable-section)
+    width: 100%;
 
     >.toggleable-selection {
         padding: 1em 20px 1em 20px;
